src/objects/NJ_SCF_Region__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCF_Region__c</fullName>
        <label>SCF Region</label>
        <picklist>
            <picklistValues>
                <fullName>NEWARK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATLANTIC CITY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>NJ SCF Region</label>
    <nameField>
        <label>NJ  Zipcode</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NJ SCF Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>